few optimization done